--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@angular/cli": "^8.3.29",
-    "bootstrap3": "^3.3.5",
+    "bootstrap3": "*3.3.5",
     "express": "^4.17.1",
     "lodash": "4.16.6",
-    "moment": "^2.29.1",
-    "react": "^17.0.1"
+    "moment": "*2.29.1",
+    "react": "*17.0.1"
   }
 }
